--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,10 @@
 # The Site Configuration
 
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
+
 # Import the theme
 theme: jekyll-theme-chirpy
 
