--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,8 @@ jobs:
 
     strategy:
       matrix:
-        ruby: ["3.1", "3.2", "3.3"]
+        #ruby: ["3.1", "3.2", "3.3"]
+        ruby: ["3.3"]
 
     steps:
       - name: Checkout
@@ -44,6 +45,10 @@ jobs:
       - name: Test Site
         run: bash tools/test.sh
   deploy:
+    permissions:
+    contents: read
+    pages: write
+    id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
