--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ theme_mode: # [light | dark]
 cdn: "https://cdn.jsdelivr.net/gh/celestemoon/CDN"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "assets/img/celesteMoon.jpg"
+avatar: "/blog/celesteMoon.jpg"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
