--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -47,8 +47,8 @@ jobs:
 
       - name: Build site
         run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
-        env:
-          JEKYLL_ENV: "production"
+        # env:
+        #   JEKYLL_ENV: "production"
 
       - name: Test site
         run: |
