--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@ timezone: Asia/Shanghai
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Corner # the main title
+title: 墙角 # the main title
 
-tagline: idk # it will display as the subtitle
+tagline: a corner in the internet. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  idk123test.
+  some random description ig
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -40,7 +40,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: frelow
-  email: test@mail.com # change to your email address
+  email: # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/none # change to your Twitter homepage
@@ -103,7 +103,7 @@ theme_mode: # [light | dark]
 cdn: "https://cdn.jsdelivr.net/gh/celestemoon/CDN"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "https://cdn.jsdelivr.net/gh/celestemoon/CDN/blog/celesteMoon.jpg"
+avatar: "/assets/celesteMoon.png"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
@@ -114,7 +114,7 @@ toc: true
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
+  provider: giscus # [disqus | utterances | giscus]
   # The provider options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -124,13 +124,13 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping: # optional, default to 'pathname'
-    strict: # optional, default to '0'
-    input_position: # optional, default to 'bottom'
+    repo: celesteMoon/BlogComments-giscus # <gh-username>/<repo>
+    repo_id: R_kgDOM4a1iw
+    category: Announcements
+    category_id: DIC_kwDOM4a1i84Ci35I
+    mapping: pathname # optional, default to 'pathname'
+    strict: 1 # optional, default to '0'
+    input_position: top # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
     reactions_enabled: # optional, default to the value of `1`
 
